# SlugVk3

./: .gitignore  CMakeLists.txt  TODO.txt  allocator.cpp  allocator.hpp  array.hpp  assert.h  asset.cpp  asset.hpp  basic.h  builtin_wrappers.h  camera.hpp  features_extensions.cpp  features_extensions.hpp  file.cpp  file.hpp  glfw.cpp  glfw.hpp  gltf.cpp  gltf.hpp  gpu.cpp  gpu.hpp  hash_map.hpp  im_so_pleased_that_i_can_understand_this.txt  image.cpp  image.hpp  main.cpp  math.hpp  model.hpp  models.hpp  old_print.hpp  print.cpp  print.h  print.hpp  shader.hpp  simd.hpp  spirv.cpp  spirv.hpp  string.cpp  string.hpp  (+3 more)
model-runtime-outline/: model_plan.md
shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  basic_fragment.frag  example_shader_material_set_layout.frag  gltf_better_pbr_example_incomplete.frag  pbr_exampler.frag  shadow.frag  shadow.vert  shadow.vert.spv
test/: a  sol.h  spirv_test.vert  spirv_test.vert.spv  test.cpp  test.hpp  test.spv  test.vert  test_gltf.gltf  test_gltf2.gltf  test_gltf2_buffer_builder.c  test_grouper_1.frag  test_grouper_1.frag.spv  test_grouper_1.vert  test_grouper_1.vert.spv
